HYDRAN-849: set correct object as reference for metdata in invoicedetails object
